Fix spacing on flexible plan cards

--- a/src/sass/components/_cards.scss
+++ b/src/sass/components/_cards.scss
@@ -9,7 +9,6 @@
   display: grid;
   font-family: $card-font-family;
   gap: $card-flow-spacing;
-  height: 600px;
   justify-items: center;
   line-height: $card-line-height;
   padding: $card-body-padding;
@@ -17,7 +16,7 @@
 
   &__top-card {
     display: grid;
-    gap: $text-box-gap;
+    gap: $size-3;
     justify-items: center;
     
     .small-text {
@@ -29,11 +28,12 @@
     display: flex;
     flex-direction: column;
     gap: $size-4;
+    padding-block: $size-9;
   }
 
   &__checked-row {
     display: flex;
-    gap: $size-2;
+    gap: $size-6;
 
     .check-icon {
       font-size: $size-6;
